# cscs-storage-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  config.yaml  pyproject.toml
src/: api_client.py  main.py  models.py  processors.py
src/cscs_storage_sync/: api_client.py  filesystem.py  main.py  models.py  processors.py
tests/: test_processors.py
